syntax = "proto3";

package pb;

option go_package = "github.com/arvalinno/simplebank/pb";

message RequestTokenRequest {
    string order_id = 1;
    int64 gross_amt = 2;
    string first_name = 3;
    string email = 4;
}

message RequestTokenResponse {
    string token = 1;
}